--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "^10.0.0",
+    "next-i18next": "^8.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
