--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "next-i18next": "^8.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.4"
   }
 }
