--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "next": "^10.0.0",
     "next-i18next": "^8.3.0",
     "react": "17.0.1",
