Add .nojekyll to export

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Export
         run: |
           npm run export
+          touch .nojekyll
           
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.3
