--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "formik": "^2.2.9",
     "next": "^10.2.3",
     "next-i18next": "^8.3.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "typescript": "^4.3.2"
