--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "cookie-cutter": "^0.2.0",
     "formik": "^2.2.9",
     "next": "^10.2.3",
     "next-i18next": "^8.3.0",
+    "next-themes": "^0.0.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "yup": "^0.32.9"
