--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@next/mdx": "^11.0.1",
     "cookie-cutter": "^0.2.0",
     "formik": "^2.2.9",
     "next": "^10.2.3",
