--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "my-reading-display",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
-    "start": "next start"
+  name: 'my-reading-display',
+  version: '0.1.0',
+  private: true,
+  scripts: {
+    dev: 'next dev',
+    build: 'next build',
+    export: 'next export',
+    start: 'next start'
   },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@next/mdx": "^11.0.1",
-    "cookie-cutter": "^0.2.0",
-    "formik": "^2.2.9",
-    "next": "^10.2.3",
-    "next-i18next": "^8.3.0",
-    "next-themes": "^0.0.14",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "yup": "^0.32.9"
+  dependencies: {
+    '@fortawesome/fontawesome-svg-core': '^1.2.35',
+    '@fortawesome/free-solid-svg-icons': '^5.15.3',
+    '@fortawesome/react-fontawesome': '^0.1.14',
+    '@material-ui/core': '^4.11.4',
+    '@material-ui/icons': '^4.11.2',
+    '@next/mdx': '^11.0.1',
+    'cookie-cutter': '^0.2.0',
+    formik: '^2.2.9',
+    'formik-material-ui': '^3.0.1',
+    next: '^10.2.3',
+    'next-i18next': '^8.3.0',
+    'next-themes': '^0.0.14',
+    react: '17.0.1',
+    'react-dom': '17.0.1',
+    yup: '^0.32.9'
   },
-  "devDependencies": {
-    "typescript": "^4.3.2"
-  }
-}
+  devDependencies: {
+    '@typescript-eslint/eslint-plugin': '^4.28.4',
+    '@typescript-eslint/parser': '^4.28.4',
+    eslint: '^7.31.0',
+    'eslint-config-airbnb': '^18.2.1',
+    'eslint-plugin-import': '^2.23.4',
+    'eslint-plugin-jsx-a11y': '^6.4.1',
+    'eslint-plugin-react': '^7.24.0',
+    'eslint-plugin-react-hooks': '^4.2.0',
+    typescript: '^4.3.2'
+  },
+};
