--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,44 +1,44 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
+    "es2021": true
   },
   "extends": [
     "plugin:react/recommended",
-    "airbnb",
+    "airbnb"
   ],
-  "parser": '@typescript-eslint/parser',
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true,
+      "jsx": true
     },
     "ecmaVersion": 12,
-    "sourceType": 'module'
+    "sourceType": "module"
   },
   "plugins": [
     "react",
-    "@typescript-eslint",
+    "@typescript-eslint"
   ],
   "rules": {
-    "react/jsx-filename-extension": [2, { extensions: ['.js', '.jsx', '.ts', '.tsx'] }],
-    "no-use-before-define": 'off',
-    "@typescript-eslint/no-use-before-define": ['error'],
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
     "import/extensions": [
       "error",
       "ignorePackages",
       {
-        "js": 'never',
-        "jsx": 'never',
-        "ts": 'never',
-        "tsx": 'never'
-      },
-    ],
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": ['.js', '.jsx', '.ts', '.tsx'],
-      },
-    },
-  },
-};
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  }
+}
