--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@next/mdx": "^11.0.1",
     "cookie-cutter": "^0.2.0",
     "formik": "^2.2.9",
-    "next": "^10.2.3",
+    "next": ">=11.1.1",
     "next-i18next": "^8.3.0",
     "next-themes": "^0.0.14",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
