--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -24,10 +25,12 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "12.0.2",
     "eslint-plugin-react": "^7.26.1",
     "typescript": "^4.3.2"
   }
