--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^5.5.0",
     "rehype-react": "^7.0.3",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^10.0.0",
