--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@next/mdx": "^11.0.1",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.1.2",
     "formik": "^2.2.9",
     "next": ">=11.1.1",
     "next-i18next": "^8.3.0",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rehype-react": "^7.0.3",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^10.0.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
