--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,11 @@
   },
   "include": [
     "next-env.d.ts",
+    "mdx.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.mdx",
+    "**/*.md"
   ],
   "exclude": [
     "node_modules"
