--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@next/eslint-plugin-next": "^12.0.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
