--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^11.1.2",
+    "@react-pdf/renderer": "^2.0.21",
     "@types/mdx-js__react": "^1.5.5",
     "formik": "^2.2.9",
     "next": ">=11.1.1",
