--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^11.1.2",
     "@react-pdf/renderer": "^2.0.21",
+    "@react-pdf/stylesheet": "^2.0.13",
+    "@react-pdf/types": "^2.0.7",
     "@types/mdx-js__react": "^1.5.5",
     "formik": "^2.2.9",
     "next": ">=11.1.1",
